[package]
name = "softwerkerconf"
version = "0.1.0"
authors = ["Elisabeth Schulz <elisabeth.schulz@codecentric.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.4" # will select latest 1.4 series version e.g. 1.4.5

# semver semantics - major.minor.patch

# compatibility if earliest non-0 version part matches

# static linking => DLL hell avoided

# Allows multiple incompatible versions linked as long as they do not interfere